libs/@local/hashql/ast/tests/ui/lowering/special-form-expander/use-glob-not-ident.jsonc
//@ run: fail
//@ description: any path that isn't an identifier should fail
[
  "::kernel::special_form::use",
  "::math",
  "::math::X",
  //~^ ERROR Use a simple identifier here
  "x"
]
